testcases/error/invalid_range.veryl
module invalid_range (
    sel: input  logic<8>,
    out: output logic   ,
) {
    assign out = inside sel {2..0};
}
